syntax = "proto3";

message RequestGetVersion {
}

message ResponseGetVersion {
  string version = 1;
}

message RequestExit {
}

message RequestGetMasterFingerprint {
}

message ResponseGetMasterFingerprint {
  uint32 fingerprint = 1;
}

message RequestGetExtendedPubkey {
  bool display = 1;
  repeated uint32 bip32_path = 2;
}

message ResponseGetExtendedPubkey {
  bytes pubkey = 1;
}

message KeyOrigin {
  uint32 fingerprint = 1;
  repeated uint32 path = 2;
}

message KeyInformation {
  bytes pubkey = 1;
  optional KeyOrigin origin = 2;
}

message WalletPolicy {
  string descriptor_template = 1;
  repeated KeyInformation keys_info = 2;
}

message WalletPolicyCoordinates {
  bool is_change = 1;
  uint32 address_index = 2;
}

message Account {
  oneof account {
    WalletPolicy wallet_policy = 2;
  }
}

message AccountCoordinates {
  oneof account {
    WalletPolicyCoordinates wallet_policy_coordinates = 1;
  }
}

message RequestRegisterAccount {
  string name = 1;
  Account account = 2;
}

message ResponseRegisterAccount {
  bytes account_id = 1;
  bytes hmac = 2;
}

message RequestGetAddress {
  bool display = 1;
  string name = 2;
  Account account = 3;
  AccountCoordinates account_coordinates = 4;
}

message ResponseGetAddress {
  string address = 1;
}

message RequestSignPsbt {
  bytes psbt = 1;
}

message PartialSignature {
  uint32 input_index = 1;
  bytes signature = 2;
  bytes public_key = 3;
  bytes leaf_hash = 4; // Optional. If it's not set, it will have the default value (empty).
}

message ResponseSignPsbt {
  repeated PartialSignature partial_signatures = 1;
}


message ResponseError {
  string error_msg = 1;
}

message Request {
  oneof request {
    RequestGetVersion get_version = 1;
    RequestExit exit = 2;
    RequestGetMasterFingerprint get_master_fingerprint = 3;
    RequestGetExtendedPubkey get_extended_pubkey = 4;
    RequestRegisterAccount register_account = 5;
    RequestGetAddress get_address = 6;
    RequestSignPsbt sign_psbt = 7;
  }
}

message Response {
  oneof response {
    ResponseGetVersion get_version = 1;
    ResponseGetMasterFingerprint get_master_fingerprint = 2;
    ResponseGetExtendedPubkey get_extended_pubkey = 3;
    ResponseRegisterAccount register_account = 4;
    ResponseGetAddress get_address = 5;
    ResponseSignPsbt sign_psbt = 6;
    ResponseError error = 7;
  }
}
